opam-version: "2.0"
version: "0.4"
maintainer: "Quentin Heath <12143333+qheath@users.noreply.github.com>"
authors: "Quentin Heath <12143333+qheath@users.noreply.github.com>"
license: "GPL-3"
#homepage: ""
#dev-repo: ""
#bug-reports: ""
build: [
  ["jbuilder" "build" "-p" name "-j" jobs "@install"]
  ["jbuilder" "build" "-p" name "-j" jobs "@runtest"] {with-test}
  ["jbuilder" "build" "-p" name "-j" jobs "@doc"] {with-doc}
]

depends: [
  "jbuilder" {build}
]
synopsis: "non-empty lists"
description: """
Simple wrappers around non-empty lists common manipulation functions."""
#url {
#  src: ""
#  checksum: ""
#}
