opam-version: "2.0"
version: "0.9"
maintainer: "Quentin Heath <12143333+qheath@users.noreply.github.com>"
authors: "Quentin Heath <12143333+qheath@users.noreply.github.com>"
homepage: "https://github.com/qheath/nelist"
bug-reports: "https://github.com/qheath/nelist/issues"
dev-repo: "git://github.com/qheath/nelist.git"
license: "GPL-3"
build: [
  ["dune" "build" "-p" name "-j" jobs "@install"]
  ["dune" "build" "-p" name "-j" jobs "@runtest"] {with-test}
  ["dune" "build" "-p" name "-j" jobs "@doc"] {with-doc}
]

depends: [
  "dune" {build}
]
synopsis: "Non-empty lists"
description: """
Simple wrappers around non-empty lists common manipulation functions."""
#url {
#  src: ""
#  checksum: ""
#}
